tests/functional/lang/eval-fail-bad-string-interpolation-4.err.exp
error:
       … while evaluating a path segment

         at /pwd/lang/eval-fail-bad-string-interpolation-4.nix:9:3:

            8| # The error message should not be too long.
            9| ''${pkgs}''
             |   ^
           10|

       error: cannot coerce a set to a string
